--- a/src/index.css
+++ b/src/index.css
@@ -110,6 +110,21 @@ img {
   font-size: 16px;
 }
 
+.showcase::before,
+.showcase::after {
+  content: '';
+  position: absolute;
+  height: 100px;
+  bottom: -70px;
+  right: 0;
+  left: 0;
+  background: #fff;
+  transform: skewY(-2deg);
+  -webkit-transform: skewY(-2deg);
+  -moz-transform: skewY(-2deg);
+  -ms-transform: skewY(-2deg);
+}
+
 /* Utilities */
 .container {
   max-width: 1100px;
@@ -141,5 +156,26 @@ img {
   box-shadow: 0 3px 10px rgba(0,0,0,0.2);
   padding: 20px;
   margin: 10px;
+}
+
+.btn {
+  display: inline-block;
+  padding: 10px 30px;
+  cursor: pointer;
+  background: var(--primary-color);
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+
+}
+
+.btn-outline {
+  text-decoration: none;
+  background-color: transparent;
+  border: 1px #fff solid;
+}
+
+.btn:hover {
+  transform: scale(0.98);
 }
 
