--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
 
 :root {
-  --primary-color: #047aed;
+    --primary-color: #047aed;
+    --secondary-color: #1c3f88;
+    --dark-color: #002240;
+    --light-color: #f4f4f4;
 }
 
 /* Navbar Styling */
@@ -123,4 +126,10 @@
 .cli .grid > *:first-child {
     grid-column: 1 /span 2;
     grid-row: 1 / span 2;
+}
+
+/* Cloud */
+
+.cloud .grid {
+    grid-template-columns: 4fr 3fr;
 }
