--- a/src/index.css
+++ b/src/index.css
@@ -93,24 +93,28 @@ img {
 
 .bg-primary,
 .btn-primary {
+  text-decoration: none;
   background-color: var(--primary-color);
   color: #fff;
 }
 
 .bg-secondary,
 .btn-secondary {
+  text-decoration: none;
   background-color: var(--secondary-color);
   color: #fff;
 }
 
 .bg-dark,
 .btn-dark {
+  text-decoration: none;
   background-color: var(--dark-color);
   color: #fff;
 }
 
 .bg-light,
 .btn-light {
+  text-decoration: none;
   background-color: var(--light-color);
   color: #333;
 }
