--- a/src/App.css
+++ b/src/App.css
@@ -154,6 +154,65 @@
     transform: translateY(-15px);
 }
 
+/* Features */
+.features-head img {
+    width: 200px;
+    justify-self: flex-end;
+}
+
+.features-sub-head img {
+    width: 300px;
+    justify-self: flex-end;
+}
+
+.features-main .card > p{
+    margin-left: 20px;
+}
+
+.features-main .grid {
+    padding: 30px;
+}
+
+.features-main .grid >*:first-child {
+    grid-column: 1 / span 3;
+}
+
+.features-main .grid >*:nth-child(2) {
+    grid-column: 1 / span 2;
+}
+
+/* Docs */
+
+.docs-head img {
+    width: 200px;
+    justify-self: flex-end;
+}
+
+.docs-link {
+    text-decoration: none;
+    color: #333;
+}
+
+.docs-link:hover {
+    font-weight: bold;
+}
+
+.docs-link li{
+    font-size: 17px;
+    padding-bottom: 5px;
+    margin-bottom: 5px;
+    border-bottom: 1px #ccc solid
+}
+
+.docs-main h3 {
+    margin: 20px 0;
+}
+
+.docs-main .grid {
+    grid-template-columns: 1fr 2fr;
+    align-items: flex-start;
+}
+
 /* Tablets and under */
 @media(max-width: 768px) {
     .grid,
@@ -197,7 +256,8 @@
 
     .navbar ul {
         padding: 10px;
-        background-color: rgba(0, 0, 0, 0.1);
+        /* background-color: rgba(0, 0, 0, 0.2); */
+        background-color: var(--dark-color);
     }
 
     .showcase .card {
