--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@
   --secondary-color: #1c3f88;
   --dark-color: #002240;
   --light-color: #f4f4f4;
+  --success-color: #5cb85c;
+  --error-color: #d9534f;
 }
 
 * {
@@ -36,6 +38,12 @@ p {
 
 img {
   width: 100%;
+}
+
+code, pre {
+  background: #333;
+  color: #fff;
+  padding: 10px;
 }
 
 /* Utilities */
@@ -149,6 +157,29 @@ img {
 
 .xl {
   font-size: 4rem;
+}
+
+/* Alert */
+
+.alert {
+  background-color: var(--light-color);
+  padding: 10px 20px;
+  font-weight: bold;
+  margin: 15px 0;
+}
+
+.alert span {
+  margin-left: 10px;
+}
+
+.alert-success {
+  background-color: var(--success-color);
+  color: #fff;
+}
+
+.alert-error {
+  background-color: var(--error-color);
+  color: #fff;
 }
 
 /* Margin */
