--- a/src/App.css
+++ b/src/App.css
@@ -219,7 +219,9 @@
     .showcase .grid,
     .stats .grid,
     .cli .grid,
-    .cloud .grid {
+    .cloud .grid,
+    .features-main .grid,
+    .docs-main .grid {
         grid-template-columns: 1fr;
         grid-template-rows: 1fr;
     }
@@ -242,6 +244,23 @@
         grid-column: 1;
         grid-row: 1;
     }
+
+    .features-head,
+    .features-sub-head,
+    .docs-head {
+        text-align: center;
+    }
+
+    .features-head img,
+    .features-sub-head img,
+    .docs-head img {
+        justify-self: center;
+    }
+
+    .features-main .grid >*:first-child,
+    .features-main .grid >*:nth-child(2) {
+        grid-column: 1;
+    }
 }
 
 /* Mobile */
@@ -256,8 +275,8 @@
 
     .navbar ul {
         padding: 10px;
-        /* background-color: rgba(0, 0, 0, 0.2); */
-        background-color: var(--dark-color);
+        background-color: rgba(0, 0, 0, 0.2);
+        /* background-color: var(--dark-color); */
     }
 
     .showcase .card {
