--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,10 @@
     grid-template-columns: 55% 45%;
     gap: 30px;
   }
+
+  .showcase-text {
+      animation: slideInFromLeft 1s ease-in;
+  }
   
   .showcase-form {
     position: relative;
@@ -63,6 +67,7 @@
     padding: 40px;
     z-index: 100;
     justify-self: flex-end;
+    animation: slideInFromTop 1s ease-in;
   }
   
   .showcase-form .form-control {
@@ -100,6 +105,7 @@
   /* Stats */
   .stats {
     padding-top: 100px;
+    animation: slideInFromBottom 1s ease-in;
   }
 
   .stats-heading {
@@ -213,6 +219,43 @@
     align-items: flex-start;
 }
 
+/* Animations */
+
+@keyframes slideInFromLeft {
+    0% {
+        transform: translateX(-100%);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
+
+@keyframes slideInFromRight {
+    0% {
+        transform: translateX(100%);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
+
+@keyframes slideInFromTop {
+    0% {
+        transform: translateY(-100%);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
+
+@keyframes slideInFromBottom {
+    0% {
+        transform: translateY(100%);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
 /* Tablets and under */
 @media(max-width: 768px) {
     .grid,
@@ -233,11 +276,13 @@
     .showcase-text {
         text-align: center;
         margin-top: 40px;
+        animation: slideInFromTop 1s ease-in;
     }
 
     .showcase-form {
         justify-self: center;
         margin: auto;
+        animation: slideInFromBottom 1s ease-in;
     }
 
     .cli .grid > *:first-child {
