--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,11 @@ code, pre {
 }
 
 /* Utilities */
+.hidden {
+  visibility: hidden;
+  height: 0;
+}
+
 .container {
   max-width: 1100px;
   margin: 0 auto;
